kube.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: develop
  labels:
    app: develop
spec:
  serviceAccountName: develop
  volumes:
  - name: appenv
    emptyDir: {}
  - name: pgdata
    emptyDir: {}
  - name: pgrun
    emptyDir: {}
  - name: ngconf
    configMap:
      name: develop
      items:
      - key: nginx.conf
        path: default.conf
  containers:
  - name: develop
    image: rexdb/build:2022.07.26
    workingDir: /app
    command: [sleep, infinity]
    volumeMounts:
    - name: appenv
      mountPath: /app
    - name: pgrun
      mountPath: /var/run/postgresql
  - name: postgres
    image: postgres:12
    volumeMounts:
    - name: pgdata
      mountPath: /var/lib/postgresql/data
    - name: pgrun
      mountPath: /var/run/postgresql
  - name: nginx
    image: nginx:1.15
    ports:
    - name: http
      containerPort: 80
    readinessProbe:
      httpGet:
        path: /healthz
        port: 80
    volumeMounts:
    - name: ngconf
      mountPath: /etc/nginx/conf.d
    - name: appenv
      subPath: run
      mountPath: /run/app
    - name: appenv
      subPath: doc/build
      mountPath: /var/www/doc

---
apiVersion: v1
kind: Service
metadata:
  name: develop
  labels:
    app: develop
spec:
  selector:
    app: develop
  ports:
  - port: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: develop
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  tls:
  - hosts:
    - NAMESPACE.EXAMPLE.COM
  rules:
  - host: NAMESPACE.EXAMPLE.COM
    http:
      paths:
      - backend:
          serviceName: develop
          servicePort: 80
